--- a/pom.xml
+++ b/pom.xml
@@ -166,26 +166,31 @@
                     </dependency>
                 </dependencies>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.jacoco</groupId>-->
-<!--                <artifactId>jacoco-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <id>prepare-agent</id>-->
-<!--                        <goals>-->
-<!--                            <goal>prepare-agent</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                    <execution>-->
-<!--                        <id>report</id>-->
-<!--                        <phase>test</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>report</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+                  <plugin>
+                     <groupId>org.jacoco</groupId>
+                     <artifactId>jacoco-maven-plugin</artifactId>
+                     <version>0.8.11</version> <executions>
+                         <execution>
+                             <id>prepare-agent</id>
+                             <goals>
+                                 <goal>prepare-agent</goal>
+                             </goals>
+                         </execution>
+                         <execution>
+                             <id>report</id>
+                             <phase>test</phase> <goals>
+                                 <goal>report</goal>
+                             </goals>
+                             <configuration>
+                                 <formats>
+                                     <format>XML</format>
+                                     <format>HTML</format>
+                                     <format>CSV</format> </formats>
+                                 <outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+                             </configuration>
+                         </execution>
+                     </executions>
+                 </plugin>
         </plugins>
     </build>
-
 </project>
