--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
                   <plugin>
                      <groupId>org.jacoco</groupId>
                      <artifactId>jacoco-maven-plugin</artifactId>
-                     <version>0.8.11</version> <executions>
+                     <version>0.8.13</version> <executions>
                          <execution>
                              <id>prepare-agent</id>
                              <goals>
@@ -177,7 +177,7 @@
                              </goals>
                          </execution>
                          <execution>
-                             <id>report</id>
+                             <id>generate-code-coverage-report</id>
                              <phase>test</phase> <goals>
                                  <goal>report</goal>
                              </goals>
