--- a/.github/workflows/jacoco_badge.yml
+++ b/.github/workflows/jacoco_badge.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Generate JaCoCo Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
+        with:
+          generate-branches-badge: true
 
       - name: Log coverage percentage
         run: |
