--- a/.github/workflows/jacoco_badge.yml
+++ b/.github/workflows/jacoco_badge.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: 'adopt'
 
       - name: Build with Maven
-        run: mvn -B test
+        run: mvn -B test -Dspring.profiles.active=test
 
       - name: Generate JaCoCo Badge
         id: jacoco
